# thelook-ecommerce-pipeline

./: .gitignore  README.md
bi/lightdash/: .env.example  README.md  docker-compose.yml
bi/lightdash/dashboards/new_users/: weekly_cumsum_new_users.sql  weekly_new_users.sql
data-source/generate-new-records/: main.py  pyproject.toml
data-source/setup/: README.md  main.py  pyproject.toml
dbt/: .sqlfluff  README.md  pyproject.toml
dbt/thelook/: .gitignore  .user.yml  dbt_project.yml  profiles.yml
dbt/thelook/models/marts/: _marts__models.yml  dim_date.sql  dim_distribution_centers.sql  dim_products.sql  dim_users.sql  fct_inventory_items.sql  fct_order_items.sql  fct_orders.sql  fct_pageviews.sql  fct_purchase_funnels.sql  fct_sessions.sql  fct_weekly_user_growth.sql
dbt/thelook/models/staging/: _staging__models.yml  schema.yml  sources.yml  stg_distribution_centers.sql  stg_events.sql  stg_inventory_items.sql  stg_order_items.sql  stg_orders.sql  stg_products.sql  stg_users.sql
dbt/thelook/tests/: assert_fct_orders_num_of_item_matches_items.sql
docs/: data-modeling.md
docs/plan/: todo.md
