[project]
name = "dbt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.14"
dependencies = [
    "dbt-core>=1.11.8",
    "dbt-duckdb>=1.10.1",
]

[tool.uv]
exclude-newer = "7 days"

[dependency-groups]
dev = [
    "ipython<=9.12.0",
    "pytest>=9.0.3",
    "ruff<0.15.12",
    "sqlfluff>=4.1.0",
    "ty<0.0.33",
]
